# flask_best_worst_scaling

./: .gitignore  Dockerfile  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dependabot-auto-merge.yml
doc/source/project_rst/annotator_rst/: annotator.rst  forms.rst  routes.rst
docs/: Makefile  make.bat
docs/source/: conf.py  config.rst  index.rst  templates.rst
docs/source/project_rst/: models.rst  project.rst
docs/source/project_rst/annotator_rst/: helpers.rst
docs/source/project_rst/user_rst/: forms.rst  helpers.rst  routes.rst  user.rst
examples/: example_fewer_5.txt  movie_reviews_examples.txt
project/: __init__.py  generator.py  models.py  validators.py
project/annotator/: __init__.py  account.py  annotation.py  forms.py  helpers.py  views.py
project/templates/: _base.html  questions.xml  start.html
project/templates/annotator/: batch.html  index.html  project.html
project/templates/bootstrap/: base.html  wtf.html
project/templates/user/: index.html  login.html  profile.html  project.html  signup.html  upload-project.html
project/user/: __init__.py  account.py  forms.py  helpers.py  inputs.py  outputs.py  views.py
tests/: __init__.py  conftest.py
tests/functional/: test_annotators.py  test_batches.py  test_homepage.py  test_login_required.py  test_projects.py  test_users.py  test_wrong_cases_input_required.py
tests/unit/: test_generator.py  test_models.py
